# contracts/openapi.yaml
@@ -872,6 +872,10 @@ components:
           type: object
           additionalProperties:
             type: string
+        correlationId:
+          type:
+          - string
+          - 'null'
     ReceiptImportAccepted:
       type: object
       additionalProperties: false
